[package]
name = "prepatory"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[dependencies]
# tokio = { version = "1.45.1", features = ["sync", "rt", "macros", "net"] }
num-traits = "0.2.19"
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"
rand = "0.8.5"
indexmap = "2.9.0"
futures = "0.3.31"
